@@ -6,6 +6,8 @@ Change History
 
 - Reinstall scripts on update which appears to be good recipe practice.
   [stefan]
+- Add a new option to the instance script, --exit-with-status. If set
+  script will return an exit code. Useful for buildbot based tests
 
 3.2 (2009-04-02)
 ----------------
